--- a/Weekly Reports/DAHL Week 18.ipynb
+++ b/Weekly Reports/DAHL Week 18.ipynb
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3c2dc22b",
+   "id": "1ee42713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "#update week\n",
-    "week = 17\n"
+    "week = 18\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "a0d346de",
    "metadata": {},
    "source": [
-    "## Matchup Plots Week 17"
+    "## Matchup Plots Week 18"
    ]
   },
   {
@@ -1293,7 +1293,210 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_stats = season_player_stats(1,week)"
+    "player_stats = season_player_stats(1,week)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a7f0a35d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player Name</th>\n",
+       "      <th>Team Name</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Week Number</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>+/-</th>\n",
+       "      <th>12</th>\n",
+       "      <th>16</th>\n",
+       "      <th>19</th>\n",
+       "      <th>25</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SA</th>\n",
+       "      <th>SHA</th>\n",
+       "      <th>SHG</th>\n",
+       "      <th>SHP</th>\n",
+       "      <th>SO</th>\n",
+       "      <th>SOG</th>\n",
+       "      <th>SV</th>\n",
+       "      <th>SV%</th>\n",
+       "      <th>TTOI ?</th>\n",
+       "      <th>W</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Elias Lindholm</td>\n",
+       "      <td>THE FirePucks</td>\n",
+       "      <td>Left Wing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1421.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yegor Sharangovich</td>\n",
+       "      <td>THE FirePucks</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1130.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vince Dunn</td>\n",
+       "      <td>THE FirePucks</td>\n",
+       "      <td>Right Wing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1835.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Victor Olofsson</td>\n",
+       "      <td>THE FirePucks</td>\n",
+       "      <td>Left Wing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2195.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shea Theodore</td>\n",
+       "      <td>THE FirePucks</td>\n",
+       "      <td>Right Wing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2252.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Player Name      Team Name    Position  Week Number  Points  +/-  \\\n",
+       "0      Elias Lindholm  THE FirePucks   Left Wing            1    6.00  0.0   \n",
+       "1  Yegor Sharangovich  THE FirePucks           0            1    2.55  2.0   \n",
+       "2          Vince Dunn  THE FirePucks  Right Wing            1    3.50 -1.0   \n",
+       "3     Victor Olofsson  THE FirePucks   Left Wing            1    9.40  0.0   \n",
+       "4       Shea Theodore  THE FirePucks  Right Wing            1    4.65  0.0   \n",
+       "\n",
+       "   12   16   19    25  ...  SA  SHA  SHG  SHP  SO  SOG  SV  SV%  TTOI ?   W  \n",
+       "0 NaN  1.0  0.0  25.0  ... NaN  0.0  0.0  0.0 NaN  3.0 NaN  NaN  1421.0 NaN  \n",
+       "1 NaN  1.0  0.0  25.0  ... NaN  0.0  0.0  0.0 NaN  0.0 NaN  NaN  1130.0 NaN  \n",
+       "2 NaN  1.0  0.0  39.0  ... NaN  0.0  0.0  0.0 NaN  6.0 NaN  NaN  1835.0 NaN  \n",
+       "3 NaN  2.0  1.0  38.0  ... NaN  0.0  0.0  0.0 NaN  8.0 NaN  NaN  2195.0 NaN  \n",
+       "4 NaN  1.0  0.0  49.0  ... NaN  0.0  0.0  0.0 NaN  2.0 NaN  NaN  2252.0 NaN  \n",
+       "\n",
+       "[5 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#player_stats.head()"
    ]
   },
   {
@@ -1347,7 +1550,7 @@
    "id": "c5f56d79",
    "metadata": {},
    "source": [
-    "# # Average TOI vs Fantasy Points: Week 17 (per Team)"
+    "# # Average TOI vs Fantasy Points"
    ]
   },
   {
@@ -1599,7 +1802,7 @@
    "id": "a58d762d",
    "metadata": {},
    "source": [
-    "# # Fantasy Points vs Power Play Points: Week 17 (per Team)"
+    "# # Fantasy Points vs Power Play Points"
    ]
   },
   {
@@ -1739,7 +1942,7 @@
    "id": "3f2282ed",
    "metadata": {},
    "source": [
-    "# # Games Played vs Fantasy Points: Week 17 (per team)"
+    "# # Games Played vs Fantasy Points"
    ]
   },
   {
